# N1Trader

./: .gitignore  Mục tiêu dự án.md  pyproject.toml
n1trader/: __init__.py
n1trader/analysis/: mae_mfe.py  positions.py  regime.py  tagger.py
n1trader/core/: __init__.py  timestamp_utils.py
n1trader/dashboard/: app.py  classification.py  compare.py  data_access.py  overview.py  trades.py
n1trader/engine/: fees.py  runner.py  venue.py
n1trader/optimize/: grid.py  metrics.py  walk_forward.py  windows.py
n1trader/strategy/: blackout.py  ema_cross.py  filters.py  signals.py
n1trading/api/: server.py
n1trading/backtest/: engine.py
n1trading/data/: fetcher.py
n1trading/report/: dashboard.py
n1trading/static/: index.html
n1trading/strategy/: ema_cross.py
plans/260626-2139-eth-futures-backtest-position-analysis/: phase-01-scaffold-data-pipeline.md  phase-02-strategy-blackout-rules.md  phase-03-engine-config-fees.md  phase-04-position-records-classification.md  phase-05-walk-forward-search.md  phase-06-streamlit-dashboard.md  plan.md
plans/reports/: brainstorm-260626-2139-eth-futures-backtest-position-analysis-report.md
scripts/: run_backtest.py  run_backtest_mtf.py  start_api.py  test_engine_smoke.py
tests/: conftest.py
tests/analysis/: test_mae_mfe.py  test_positions.py  test_regime.py  test_tagger.py
tests/dashboard/: test_data_access.py
tests/engine/: test_engine_smoke.py  test_fees.py  test_runner_smoke.py  test_timestamp_utils.py  test_venue_instrument.py
tests/fixtures/: news_sample.csv
tests/optimize/: test_grid.py  test_metrics.py  (+2 more)
(+4 files in other folders)
