[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "n1trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-binance>=1.0.19",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["n1trading*"]
